# veyra

./: .clangd  .gitmodules  CMakeLists.txt  README.md  shell.nix
src/: constants.hpp  main.cpp
src/bus/: bus.cpp  bus.hpp
src/cpu/: cpu.cpp  cpu.hpp  opcodes.cpp
src/ppu/: ppu.cpp  ppu.hpp
src/ppu/registers/: address.cpp  controller.cpp  mask.cpp  registers.hpp  scroll.cpp  status.cpp
src/rom/: rom.cpp  rom.hpp
src/utils/: utils.cpp  utils.hpp
